Add time to each item for screen readers
Screen readers don't have the same ability to visually scan for the time
slot the item is in. Instead, add the time to each item.

--- a/src/config_example.json
+++ b/src/config_example.json
@@ -181,6 +181,10 @@
     "SHOW_DURATION": true,
     "DURATION_LABEL": "Duration: @mins mins"
   },
+  "START_TIME": {
+    "START_TIME_LABEL": "Starts: @con_time",
+    "START_TIME_WITH_LOCAL_LABEL": "Starts: @con_time con time, @local_time local time"
+  },
   "SHOW_PAST_ITEMS": {
     "SHOW_CHECKBOX": true,
     "CHECKBOX_LABEL": "Show past items",
