--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "conclar",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://guide.metropolcon.eu/",
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "dompurify": "^2.3.4",
+    "dompurify": "3.2.4",
     "easy-peasy": "^5.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
