--- a/package.json
+++ b/package.json
@@ -6,31 +6,32 @@
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
-    "dompurify": "3.2.4",
-    "easy-peasy": "^5.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@vitejs/plugin-react": "^5.1.4",
+    "dompurify": "3.3.1",
+    "easy-peasy": "^6.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^4.3.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-markdown": "^7.1.2",
+    "react-infinite-scroll-component": "^6.1.1",
+    "react-markdown": "^10.1.0",
     "react-qr-code": "^2.0.7",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.1",
-    "react-select": "^5.2.2",
-    "react-spring": "^9.4.2",
-    "react-timezone-select": "^1.3.1",
+    "react-router-dom": "^7.13.0",
+    "react-select": "^5.10.2",
+    "react-spring": "^10.0.3",
+    "react-timezone-select": "^3.2.8",
     "react-use-measure": "^2.1.1",
     "remark-gfm": "^3.0.1",
     "timezone-soft": "^1.4.1",
+    "vite": "^7.3.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "eslintConfig": {
     "extends": [
