chore: Update project name and eslint config
- Renamed project to "metroclar" in `package.json`.
- Switched eslint config from `react-app/jest` to `vitest` for testing.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conclar",
+  "name": "metroclar",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://guide.metropolcon.eu/",
@@ -36,7 +36,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "vitest"
     ]
   },
   "browserslist": {
