--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "homepage": "https://guide.metropolcon.eu/",
   "dependencies": {
     "@js-temporal/polyfill": "^0.4.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@vitejs/plugin-react": "^5.1.4",
     "dompurify": "3.3.1",
     "easy-peasy": "^6.1.0",
     "react": "^19.2.4",
@@ -24,7 +20,6 @@
     "react-use-measure": "^2.1.1",
     "remark-gfm": "^3.0.1",
     "timezone-soft": "^1.4.1",
-    "vite": "^7.3.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -50,5 +45,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^5.1.4",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   }
 }
