--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@js-temporal/polyfill": "^0.4.0",
     "dompurify": "3.3.1",
     "easy-peasy": "^6.1.0",
+    "i18next": "^25.8.6",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.1",
     "react-markdown": "^10.1.0",
