test: Add unit tests for `Navigation` component and integrate i18n translations
- Introduced comprehensive Vitest-based unit tests for the `Navigation` component to cover key functionalities and external link rendering.
- Integrated `react-i18next` to replace hardcoded labels with localized i18n strings.
- Updated the `Navigation` component to conditionally render links based on config values.
- Adjusted the `Loading` component to utilize i18n translations for loading messages.

--- a/src/config_example.json
+++ b/src/config_example.json
@@ -25,11 +25,7 @@
     "LINEFEED_AFTER_URL": false
   },
   "NAVIGATION": {
-    "PROGRAM": "Programme",
-    "PEOPLE": "People",
-    "MYSCHEDULE": "My Schedule",
-    "INFO": "Information",
-    "SETTINGS": "Settings",
+    "INFO": true,
     "EXTRA": [{ "LABEL": "Octocon Home", "URL": "https://octocon.com" }]
   },
   "HELP_TEXT": {
