--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metroclar",
+  "name": "metroclár",
   "version": "0.9.0",
   "private": true,
   "homepage": "https://guide.metropolcon.eu/",
